[Add] model template (with data loading [Add] tfidf model

--- a/datagen.ipynb
+++ b/datagen.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,7 +40,7 @@
     "        path = kagglehub.competition_download(dataset)\n",
     "    else:\n",
     "        path = kagglehub.dataset_download(dataset)\n",
-    "    return pd.read_csv(os.path.join(path, name))"
+    "    return pd.read_csv(Path(path) / name)"
    ]
   },
   {
@@ -1624,7 +1625,13 @@
    "metadata": {},
    "source": [
     "## Citation\n",
-    "Jules King, Perpetual Baffour, Scott Crossley, Ryan Holbrook, and Maggie Demkin. LLM - Detect AI Generated Text. https://kaggle.com/competitions/llm-detect-ai-generated-text, 2023. Kaggle."
+    "\n",
+    "- Jules King, Perpetual Baffour, Scott Crossley, Ryan Holbrook, and Maggie Demkin. LLM - Detect AI Generated Text. https://kaggle.com/competitions/llm-detect-ai-generated-text, 2023. Kaggle.\n",
+    "- Crossley, S. A, Baffour, P., Tian, Y., Franklin, A., Benner, M., & Boser., U. (2024). A large-scale corpus for assessing written argumentation: PERSUADE 2.0. Assessing Writing, 61. https://doi.org/10.1016/j.asw.2024.100865.\n",
+    "- https://www.kaggle.com/datasets/carlmcbrideellis/llm-mistral-7b-instruct-texts\n",
+    "- https://www.kaggle.com/datasets/alejopaullier/argugpt\n",
+    "- https://www.kaggle.com/datasets/thedrcat/daigt-v4-train-dataset\n",
+    "- https://www.kaggle.com/datasets/conjuring92/fpe-processed-dataset"
    ]
   }
  ],
