--- a/model_template.ipynb
+++ b/model_template.ipynb
@@ -30,18 +30,21 @@
    "outputs": [],
    "source": [
     "import transformers as T\n",
-    "from datasets import load_dataset\n",
+    "from datasets import Dataset\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "# from torch.utils.data import Dataset, DataLoader\n",
     "from torch.optim import AdamW\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import kagglehub\n",
+    "import numpy as np\n",
     "\n",
     "import os\n",
+    "from pathlib import Path\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from IPython.display import display, HTML"
    ]
   },
   {
@@ -50,25 +53,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CFG:\n",
-    "    seed = 42\n",
-    "    n_folds = 5\n",
-    "    train_fold = [0, 1, 2]\n",
-    "    val_fold = [3, 4]\n",
-    "\n",
-    "    epochs = 5\n",
-    "    batch_size = 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from typing import Literal\n",
     "\n",
-    "HOST: Literal['Localhost', 'Interactive', 'Batch'] = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', 'Localhost')"
+    "HOST: Literal['Localhost', 'Interactive', 'Batch'] = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', 'Localhost')\n",
+    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')"
    ]
   },
   {
@@ -87,8 +75,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Citation\n",
-    "Jules King, Perpetual Baffour, Scott Crossley, Ryan Holbrook, and Maggie Demkin. LLM - Detect AI Generated Text. https://kaggle.com/competitions/llm-detect-ai-generated-text, 2023. Kaggle."
+    "## Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_kaggle_csv(dataset: str, name: str, is_comp: bool = False) -> pd.DataFrame:\n",
+    "    assert name.endswith('.csv')\n",
+    "    if is_comp:\n",
+    "        path = kagglehub.competition_download(dataset)\n",
+    "    else:\n",
+    "        path = kagglehub.dataset_download(dataset)\n",
+    "    return pd.read_csv(Path(path) / name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_path = Path(kagglehub.dataset_download(\"dogeon188/daigt-datamix\"))\n",
+    "# df_train = pd.read_csv(data_path / 'train_essays.csv')\n",
+    "if IS_RERUN:\n",
+    "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
+    "    df_test = get_kaggle_csv('llm-detect-ai-generated-text', 'test_essays.csv', is_comp=True)\n",
+    "else:\n",
+    "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
+    "    # split df_train into train and test\n",
+    "    df_train = df_train.sample(frac=1).reset_index(drop=True)\n",
+    "    df_test = df_train.iloc[-10000:]\n",
+    "    # df_train = df_train.iloc[:-1000]\n",
+    "    df_train = df_train.iloc[:-10000]"
    ]
   }
  ],
