[Fix] is_rerun flag usage

--- a/model_tfidf_logistic.ipynb
+++ b/model_tfidf_logistic.ipynb
@@ -120,8 +120,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_path = Path(kagglehub.dataset_download(\"dogeon188/daigt-datamix\"))\n",
-    "# df_train = pd.read_csv(data_path / 'train_essays.csv')\n",
     "if IS_RERUN:\n",
     "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
     "    df_test = get_kaggle_csv('llm-detect-ai-generated-text', 'test_essays.csv', is_comp=True)\n",
@@ -130,7 +128,6 @@
     "    # split df_train into train and test\n",
     "    df_train = df_train.sample(frac=1).reset_index(drop=True)\n",
     "    df_test = df_train.iloc[-10000:]\n",
-    "    # df_train = df_train.iloc[:-1000]\n",
     "    df_train = df_train.iloc[:-10000]"
    ]
   },
@@ -143,9 +140,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "100%|██████████| 10000/10000 [00:07<00:00, 1329.93it/s]\n",
+      "100%|██████████| 89836/89836 [01:07<00:00, 1329.92it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import PreTrainedTokenizerFast\n",
     "from tokenizers import Tokenizer, models, normalizers, pre_tokenizers, trainers\n",
@@ -190,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,10 +236,7 @@
     ")\n",
     "\n",
     "tf_train = vectorizer.fit_transform(tokenized_texts_train)\n",
-    "tf_test = vectorizer.transform(tokenized_texts_test)\n",
-    "\n",
-    "# del vocab, vectorizer, tokenized_texts_train, tokenized_texts_test\n",
-    "# gc.collect()"
+    "tf_test = vectorizer.transform(tokenized_texts_test)"
    ]
   },
   {
@@ -268,7 +284,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NB Done!\n",
+      "SGD Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dogeon/Documents/code/py/nlp/final/.venv/lib/python3.12/site-packages/lightgbm/engine.py:204: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+      "  _log_warning(f\"Found `{alias}` in params. Will use it instead of argument\")\n"
+     ]
+    }
+   ],
    "source": [
     "clf.fit(tf_train, y_train)\n",
     "p1 = clf.predict_proba(tf_test)[:, 1]\n",
@@ -305,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not IS_RERUN:\n",
+    "if IS_RERUN:\n",
     "    df_test['generated'] = final_preds\n",
     "    submission = df_test[['prompt_id', 'generated']]\n",
     "    submission.to_csv('submission.csv', index=False)"
