--- a/model_tfidf_source.ipynb
+++ b/model_tfidf_source.ipynb
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not IS_RERUN:\n",
+    "if IS_RERUN:\n",
     "    p1 = clf.predict_proba(tf_test)[:, np.where(clf.classes_ == 'human')[0][0]]\n",
     "    p2 = sgd_model.predict_proba(tf_test)[:, np.where(sgd_model.classes_ == 'human')[0][0]]\n",
     "    p3 = lgb.predict_proba(tf_test)[:, np.where(lgb.classes_ == 'human')[0][0]]\n",
