[Mod] ful run only when rerun [Fix] kaggle submission issue

--- a/model_template.ipynb
+++ b/model_template.ipynb
@@ -56,7 +56,9 @@
     "from typing import Literal\n",
     "\n",
     "HOST: Literal['Localhost', 'Interactive', 'Batch'] = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', 'Localhost')\n",
-    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')"
+    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')\n",
+    "\n",
+    "print(f'HOST: {HOST}, IS_RERUN: {IS_RERUN}')"
    ]
   },
   {
@@ -93,6 +95,8 @@
    "source": [
     "def get_kaggle_csv(dataset: str, name: str, is_comp: bool = False) -> pd.DataFrame:\n",
     "    assert name.endswith('.csv')\n",
+    "    if IS_RERUN:\n",
+    "        return pd.read_csv(f'/kaggle/input/{dataset}/{name}')\n",
     "    if is_comp:\n",
     "        path = kagglehub.competition_download(dataset)\n",
     "    else:\n",
@@ -106,18 +110,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_path = Path(kagglehub.dataset_download(\"dogeon188/daigt-datamix\"))\n",
-    "# df_train = pd.read_csv(data_path / 'train_essays.csv')\n",
     "if IS_RERUN:\n",
-    "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
+    "    df_train = get_kaggle_csv('daigt-datamix', 'train_essays.csv')\n",
     "    df_test = get_kaggle_csv('llm-detect-ai-generated-text', 'test_essays.csv', is_comp=True)\n",
     "else:\n",
     "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
     "    # split df_train into train and test\n",
     "    df_train = df_train.sample(frac=1).reset_index(drop=True)\n",
-    "    df_test = df_train.iloc[-10000:]\n",
-    "    # df_train = df_train.iloc[:-1000]\n",
-    "    df_train = df_train.iloc[:-10000]"
+    "    df_test = df_train.iloc[-1000:]\n",
+    "    df_train = df_train.iloc[:10000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "...\n",
+    "\n",
+    "final_preds = ...  # should be a 1D array of predictions, with the same length as df_test, and values in [0, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validation\n",
+    "if not IS_RERUN:\n",
+    "    from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "    auc_score = roc_auc_score(df_test['generated'], final_preds)\n",
+    "    \n",
+    "    print(f\"ROC AUC: {auc_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test['generated'] = final_preds\n",
+    "submission = df_test[['id' if IS_RERUN else 'prompt_id', 'generated']]\n",
+    "submission.to_csv('submission.csv', index=False)"
    ]
   }
  ],
