--- a/model_tfidf_logistic.ipynb
+++ b/model_tfidf_logistic.ipynb
@@ -17,20 +17,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %pip install transformers\n",
-    "# %pip install peft\n",
-    "# %pip install bitsandbytes\n",
-    "# %pip install accelerate\n",
-    "# %pip install omegaconf\n",
-    "# %pip install lightgbm"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "import transformers as T\n",
@@ -54,6 +42,7 @@
     "import numpy as np\n",
     "\n",
     "import os\n",
+    "import gc\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -63,20 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "from typing import Literal\n",
     "\n",
     "HOST: Literal['Localhost', 'Interactive', 'Batch'] = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', 'Localhost')\n",
-    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')"
+    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')\n",
+    "\n",
+    "print(f'HOST: {HOST}, IS_RERUN: {IS_RERUN}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "device = torch.device(\n",
@@ -93,20 +90,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load Data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "def get_kaggle_csv(dataset: str, name: str, is_comp: bool = False) -> pd.DataFrame:\n",
     "    assert name.endswith('.csv')\n",
+    "    if IS_RERUN:\n",
+    "        return pd.read_csv(f'/kaggle/input/{dataset}/{name}')\n",
     "    if is_comp:\n",
     "        path = kagglehub.competition_download(dataset)\n",
     "    else:\n",
@@ -116,19 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "if IS_RERUN:\n",
-    "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
+    "    df_train = get_kaggle_csv('daigt-datamix', 'train_essays.csv')\n",
     "    df_test = get_kaggle_csv('llm-detect-ai-generated-text', 'test_essays.csv', is_comp=True)\n",
     "else:\n",
     "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
     "    # split df_train into train and test\n",
     "    df_train = df_train.sample(frac=1).reset_index(drop=True)\n",
-    "    df_test = df_train.iloc[-10000:]\n",
-    "    df_train = df_train.iloc[:-10000]"
+    "    df_test = df_train.iloc[-1000:]\n",
+    "    df_train = df_train.iloc[:10000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
    ]
   },
   {
@@ -140,53 +143,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "100%|██████████| 10000/10000 [00:07<00:00, 1329.93it/s]\n",
-      "100%|██████████| 89836/89836 [01:07<00:00, 1329.92it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
    "source": [
     "from transformers import PreTrainedTokenizerFast\n",
     "from tokenizers import Tokenizer, models, normalizers, pre_tokenizers, trainers\n",
     "\n",
     "VOCAB_SIZE = 30000\n",
-    "LOWERCASE = False\n",
+    "LOWERCASE = True\n",
     "\n",
     "raw_tokenizer = Tokenizer(models.BPE(unk_token=\"[UNK]\"))\n",
-    "raw_tokenizer.normalizer = normalizers.Sequence([normalizers.NFC()] + [normalizers.Lowercase()] if LOWERCASE else [])\n",
+    "raw_tokenizer.normalizer = normalizers.Sequence(\n",
+    "    [normalizers.NFC()] + [normalizers.Lowercase()] if LOWERCASE else [])\n",
     "raw_tokenizer.pre_tokenizer = pre_tokenizers.ByteLevel()\n",
     "special_tokens = [\"[UNK]\", \"[PAD]\", \"[CLS]\", \"[SEP]\", \"[MASK]\"]\n",
-    "trainer = trainers.BpeTrainer(vocab_size=VOCAB_SIZE, special_tokens=special_tokens)\n",
+    "trainer = trainers.BpeTrainer(\n",
+    "    vocab_size=VOCAB_SIZE, special_tokens=special_tokens)\n",
     "\n",
     "ds_test = Dataset.from_pandas(df_test[['text']])\n",
-    "ds_train = Dataset.from_pandas(df_train[['text']])\n",
+    "# ds_train = Dataset.from_pandas(df_train[['text']])\n",
+    "\n",
+    "\n",
     "def train_corp_iter():\n",
     "    for i in range(0, len(ds_test), 1000):\n",
     "        yield ds_test[i: i + 1000][\"text\"]\n",
-    "    for i in range(0, len(ds_train), 1000):\n",
-    "        yield ds_train[i: i + 1000][\"text\"]\n",
+    "    # for i in range(0, len(ds_train), 1000):\n",
+    "    #     yield ds_train[i: i + 1000][\"text\"]\n",
     "\n",
-    "raw_tokenizer.train_from_iterator(train_corp_iter(), trainer=trainer)\n",
+    "\n",
+    "raw_tokenizer.train_from_iterator(\n",
+    "    train_corp_iter(),\n",
+    "    trainer=trainer,\n",
+    "    # length=len(ds_test) + len(ds_train)\n",
+    ")\n",
     "\n",
     "tokenizer = PreTrainedTokenizerFast(\n",
     "    tokenizer_object=raw_tokenizer,\n",
@@ -196,21 +188,26 @@
     "    sep_token=\"[SEP]\",\n",
     "    mask_token=\"[MASK]\",\n",
     ")\n",
-    "tokenized_texts_test = []\n",
     "\n",
-    "for text in tqdm(df_test['text'].tolist()):\n",
-    "    tokenized_texts_test.append(tokenizer.tokenize(text))\n",
-    "\n",
-    "tokenized_texts_train = []\n",
-    "\n",
-    "for text in tqdm(df_train['text'].tolist()):\n",
-    "    tokenized_texts_train.append(tokenizer.tokenize(text))\n"
+    "tokenized_texts_test = [tokenizer.tokenize(text)\n",
+    "                        for text in tqdm(df_test['text'])]\n",
+    "tokenized_texts_train = [tokenizer.tokenize(text)\n",
+    "                         for text in tqdm(df_train['text'])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TFIDF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -224,7 +221,7 @@
     "    tokenizer=dummy, preprocessor=dummy,\n",
     "    token_pattern=None, strip_accents='unicode')\n",
     "\n",
-    "vectorizer.fit(tokenized_texts_test)\n",
+    "vectorizer.fit(tqdm(tokenized_texts_test))\n",
     "\n",
     "# Getting vocab\n",
     "vocab = vectorizer.vocabulary_\n",
@@ -235,23 +232,31 @@
     "    token_pattern=None, strip_accents='unicode'\n",
     ")\n",
     "\n",
-    "tf_train = vectorizer.fit_transform(tokenized_texts_train)\n",
-    "tf_test = vectorizer.transform(tokenized_texts_test)"
+    "tf_train = vectorizer.fit_transform(tqdm(tokenized_texts_train))\n",
+    "tf_test = vectorizer.transform(tqdm(tokenized_texts_test))\n",
+    "\n",
+    "\n",
+    "del vocab, vectorizer, tokenized_texts_train, tokenized_texts_test\n",
+    "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
-    "y_train = df_train['generated']\n"
+    "y_train = df_train['generated']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "from lightgbm import LGBMClassifier\n",
@@ -262,8 +267,9 @@
     "\n",
     "sgd_model = SGDClassifier(max_iter=8000, tol=1e-4, loss=\"modified_huber\")\n",
     "\n",
+    "LGB_N_ITER = 100 if IS_RERUN else 1\n",
     "lgb = LGBMClassifier(\n",
-    "    num_iterations=2500,\n",
+    "    n_estimators=LGB_N_ITER,\n",
     "    num_leaves=51,\n",
     "    objective='binary',\n",
     "    metric='roc_auc',\n",
@@ -271,8 +277,8 @@
     "    colsample_bytree=0.7,\n",
     "    colsample_bynode=0.6,\n",
     "    lambda_l1=8,\n",
-    "    num_threads=4,\n",
     "    lambda_l2=5,\n",
+    "    num_threads=4,\n",
     "    min_data_in_leaf=10,\n",
     "    max_depth=20,\n",
     "    max_bin=900,\n",
@@ -281,28 +287,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NB Done!\n",
-      "SGD Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dogeon/Documents/code/py/nlp/final/.venv/lib/python3.12/site-packages/lightgbm/engine.py:204: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
-      "  _log_warning(f\"Found `{alias}` in params. Will use it instead of argument\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "clf.fit(tf_train, y_train)\n",
     "p1 = clf.predict_proba(tf_test)[:, 1]\n",
     "print(\"NB Done!\")\n",
@@ -311,17 +308,28 @@
     "p2 = sgd_model.predict_proba(tf_test)[:, 1]\n",
     "print(\"SGD Done!\")\n",
     "\n",
-    "lgb.fit(tf_train, y_train)\n",
+    "pbar = tqdm(total=LGB_N_ITER)\n",
+    "lgb.fit(tf_train, y_train, callbacks=[lambda _: pbar.update(1)])\n",
     "p3 = lgb.predict_proba(tf_test)[:, 1]\n",
     "print(\"LGBM Done!\")\n",
+    "pbar.close()\n",
     "\n",
     "final_preds = p1 * 0.1 + p2 * 0.45 + p3 * 0.45"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "if not IS_RERUN:\n",
@@ -333,19 +341,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
-    "if IS_RERUN:\n",
-    "    df_test['generated'] = final_preds\n",
-    "    submission = df_test[['prompt_id', 'generated']]\n",
-    "    submission.to_csv('submission.csv', index=False)"
+    "df_test['generated'] = final_preds\n",
+    "submission = df_test[['id' if IS_RERUN else 'prompt_id', 'generated']]\n",
+    "submission.to_csv('submission.csv', index=False)"
    ]
   }
  ],
  "metadata": {
+  "kaggle": {
+   "accelerator": "none",
+   "dataSources": [
+    {
+     "databundleVersionId": 7516023,
+     "sourceId": 61542,
+     "sourceType": "competition"
+    },
+    {
+     "datasetId": 4309752,
+     "sourceId": 7409832,
+     "sourceType": "datasetVersion"
+    },
+    {
+     "datasetId": 6308778,
+     "sourceId": 10208045,
+     "sourceType": "datasetVersion"
+    }
+   ],
+   "dockerImageVersionId": 30786,
+   "isGpuEnabled": false,
+   "isInternetEnabled": false,
+   "language": "python",
+   "sourceType": "notebook"
+  },
   "kernelspec": {
    "display_name": ".venv",
    "language": "python",
@@ -365,5 +406,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
