--- a/model_tfidf_source.ipynb
+++ b/model_tfidf_source.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,7 @@
     "import numpy as np\n",
     "\n",
     "import os\n",
+    "import gc\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -63,19 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Literal\n",
     "\n",
     "HOST: Literal['Localhost', 'Interactive', 'Batch'] = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', 'Localhost')\n",
-    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')"
+    "IS_RERUN: bool = os.getenv('KAGGLE_IS_COMPETITION_RERUN')\n",
+    "\n",
+    "print(f'HOST: {HOST}, IS_RERUN: {IS_RERUN}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,20 +96,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load Data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_kaggle_csv(dataset: str, name: str, is_comp: bool = False) -> pd.DataFrame:\n",
     "    assert name.endswith('.csv')\n",
+    "    if IS_RERUN:\n",
+    "        return pd.read_csv(f'/kaggle/input/{dataset}/{name}')\n",
     "    if is_comp:\n",
     "        path = kagglehub.competition_download(dataset)\n",
     "    else:\n",
@@ -116,22 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_path = Path(kagglehub.dataset_download(\"dogeon188/daigt-datamix\"))\n",
-    "# df_train = pd.read_csv(data_path / 'train_essays.csv')\n",
     "if IS_RERUN:\n",
-    "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
+    "    df_train = get_kaggle_csv('daigt-datamix', 'train_essays.csv')\n",
     "    df_test = get_kaggle_csv('llm-detect-ai-generated-text', 'test_essays.csv', is_comp=True)\n",
     "else:\n",
     "    df_train = get_kaggle_csv('dogeon188/daigt-datamix', 'train_essays.csv')\n",
     "    # split df_train into train and test\n",
     "    df_train = df_train.sample(frac=1).reset_index(drop=True)\n",
-    "    df_test = df_train.iloc[-10000:]\n",
-    "    # df_train = df_train.iloc[:-1000]\n",
-    "    df_train = df_train.iloc[:-10000]"
+    "    df_test = df_train.iloc[-1000:]\n",
+    "    df_train = df_train.iloc[:10000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
    ]
   },
   {
@@ -145,29 +147,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 4016.25it/s]\n",
+      "100%|██████████| 99836/99836 [01:19<00:00, 1248.30it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import PreTrainedTokenizerFast\n",
     "from tokenizers import Tokenizer, models, normalizers, pre_tokenizers, trainers\n",
     "\n",
     "VOCAB_SIZE = 30000\n",
-    "LOWERCASE = False\n",
+    "LOWERCASE = True\n",
     "\n",
     "raw_tokenizer = Tokenizer(models.BPE(unk_token=\"[UNK]\"))\n",
-    "raw_tokenizer.normalizer = normalizers.Sequence([normalizers.NFC()] + [normalizers.Lowercase()] if LOWERCASE else [])\n",
+    "raw_tokenizer.normalizer = normalizers.Sequence(\n",
+    "    [normalizers.NFC()] + [normalizers.Lowercase()] if LOWERCASE else [])\n",
     "raw_tokenizer.pre_tokenizer = pre_tokenizers.ByteLevel()\n",
     "special_tokens = [\"[UNK]\", \"[PAD]\", \"[CLS]\", \"[SEP]\", \"[MASK]\"]\n",
-    "trainer = trainers.BpeTrainer(vocab_size=VOCAB_SIZE, special_tokens=special_tokens)\n",
+    "trainer = trainers.BpeTrainer(\n",
+    "    vocab_size=VOCAB_SIZE, special_tokens=special_tokens)\n",
     "\n",
     "ds_test = Dataset.from_pandas(df_test[['text']])\n",
-    "ds_train = Dataset.from_pandas(df_train[['text']])\n",
+    "# ds_train = Dataset.from_pandas(df_train[['text']])\n",
+    "\n",
+    "\n",
     "def train_corp_iter():\n",
     "    for i in range(0, len(ds_test), 1000):\n",
     "        yield ds_test[i: i + 1000][\"text\"]\n",
-    "    for i in range(0, len(ds_train), 1000):\n",
-    "        yield ds_train[i: i + 1000][\"text\"]\n",
+    "    # for i in range(0, len(ds_train), 1000):\n",
+    "    #     yield ds_train[i: i + 1000][\"text\"]\n",
     "\n",
-    "raw_tokenizer.train_from_iterator(train_corp_iter(), trainer=trainer)\n",
+    "\n",
+    "raw_tokenizer.train_from_iterator(\n",
+    "    train_corp_iter(),\n",
+    "    trainer=trainer,\n",
+    "    # length=len(ds_test) + len(ds_train)\n",
+    ")\n",
     "\n",
     "tokenizer = PreTrainedTokenizerFast(\n",
     "    tokenizer_object=raw_tokenizer,\n",
@@ -177,22 +206,45 @@
     "    sep_token=\"[SEP]\",\n",
     "    mask_token=\"[MASK]\",\n",
     ")\n",
-    "tokenized_texts_test = []\n",
     "\n",
-    "for text in tqdm(df_test['text'].tolist()):\n",
-    "    tokenized_texts_test.append(tokenizer.tokenize(text))\n",
-    "\n",
-    "tokenized_texts_train = []\n",
-    "\n",
-    "for text in tqdm(df_train['text'].tolist()):\n",
-    "    tokenized_texts_train.append(tokenizer.tokenize(text))\n"
+    "tokenized_texts_test = [tokenizer.tokenize(text)\n",
+    "                        for text in tqdm(df_test['text'])]\n",
+    "tokenized_texts_train = [tokenizer.tokenize(text)\n",
+    "                         for text in tqdm(df_train['text'])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TFIDF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 1041.63it/s]\n",
+      "100%|██████████| 99836/99836 [00:39<00:00, 2514.95it/s]\n",
+      "100%|██████████| 3/3 [00:00<00:00, 11115.65it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
@@ -205,7 +257,7 @@
     "    tokenizer=dummy, preprocessor=dummy,\n",
     "    token_pattern=None, strip_accents='unicode')\n",
     "\n",
-    "vectorizer.fit(tokenized_texts_test)\n",
+    "vectorizer.fit(tqdm(tokenized_texts_test))\n",
     "\n",
     "# Getting vocab\n",
     "vocab = vectorizer.vocabulary_\n",
@@ -216,13 +268,16 @@
     "    token_pattern=None, strip_accents='unicode'\n",
     ")\n",
     "\n",
-    "tf_train = vectorizer.fit_transform(tokenized_texts_train)\n",
-    "tf_test = vectorizer.transform(tokenized_texts_test)"
+    "tf_train = vectorizer.fit_transform(tqdm(tokenized_texts_train))\n",
+    "tf_test = vectorizer.transform(tqdm(tokenized_texts_test))\n",
+    "\n",
+    "del vocab, vectorizer, tokenized_texts_train, tokenized_texts_test\n",
+    "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,9 +286,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NB Done!\n",
+      "SGD Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 25/25 [1:04:04<00:00, 153.79s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LGBM Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "/Users/dogeon/Documents/code/py/nlp/final/.venv/lib/python3.12/site-packages/lightgbm/engine.py:204: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
+      "  _log_warning(f\"Found `{alias}` in params. Will use it instead of argument\")\n"
+     ]
+    }
+   ],
    "source": [
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.linear_model import SGDClassifier\n",
@@ -243,55 +330,48 @@
     "\n",
     "sgd_model = SGDClassifier(max_iter=8000, tol=1e-4, loss=\"modified_huber\")\n",
     "\n",
+    "LGB_N_ITER = 100 if IS_RERUN else 1\n",
     "lgb = LGBMClassifier(\n",
-    "    num_iterations=2500,\n",
+    "    n_estimators=LGB_N_ITER,\n",
     "    num_leaves=51,\n",
-    "    objective='multiclass',\n",
-    "    metric='multi_logloss',\n",
+    "    objective='binary',\n",
+    "    metric='roc_auc',\n",
     "    learning_rate=0.05,\n",
     "    colsample_bytree=0.7,\n",
     "    colsample_bynode=0.6,\n",
     "    lambda_l1=8,\n",
-    "    num_threads=4,\n",
     "    lambda_l2=5,\n",
+    "    num_threads=4,\n",
     "    min_data_in_leaf=10,\n",
     "    max_depth=20,\n",
     "    max_bin=900,\n",
     "    verbose=-1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "clf.fit(tf_train, y_train)\n",
     "human_idx = np.where(clf.classes_ == 'human')[0][0]\n",
-    "p1 = clf.predict_proba(tf_test)[:, human_idx]\n",
     "print(\"NB Done!\")\n",
     "\n",
     "sgd_model.fit(tf_train, y_train)\n",
     "human_idx = np.where(sgd_model.classes_ == 'human')[0][0]\n",
-    "p2 = sgd_model.predict_proba(tf_test)[:, human_idx]\n",
     "print(\"SGD Done!\")\n",
     "\n",
-    "lgb.fit(tf_train, y_train)\n",
+    "pbar = tqdm(total=LGB_N_ITER)\n",
+    "lgb.fit(tf_train, y_train, callbacks=[lambda x: pbar.update(1)])\n",
     "human_idx = np.where(lgb.classes_ == 'human')[0][0]\n",
-    "p3 = lgb.predict_proba(tf_test)[:, human_idx]\n",
-    "print(\"LGBM Done!\")\n",
-    "\n",
-    "# del clf, lgb, sgd_model\n",
-    "# gc.collect()\n",
-    "\n",
-    "# ensemble ---\n",
-    "final_preds = p1*0.1 + p2*0.45 + p3*0.45"
+    "print(\"LGBM Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +383,7 @@
     "    p2 = sgd_model.predict_proba(tf_test)\n",
     "    p3 = lgb.predict_proba(tf_test)\n",
     "    final_preds = p1*0.1 + p2*0.45 + p3*0.45\n",
+    "    \n",
     "    # calculate the final score\n",
     "    mc_score = log_loss(df_test['source'], final_preds)\n",
     "\n",
@@ -317,20 +398,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submission"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if IS_RERUN:\n",
-    "    p1 = clf.predict_proba(tf_test)[:, np.where(clf.classes_ == 'human')[0][0]]\n",
-    "    p2 = sgd_model.predict_proba(tf_test)[:, np.where(sgd_model.classes_ == 'human')[0][0]]\n",
-    "    p3 = lgb.predict_proba(tf_test)[:, np.where(lgb.classes_ == 'human')[0][0]]\n",
-    "    final_preds = p1*0.1 + p2*0.45 + p3*0.45\n",
-    "    final_preds = 1 - final_preds\n",
-    "    df_test['generated'] = final_preds\n",
-    "    submission = df_test[['prompt_id', 'generated']]\n",
-    "    submission.to_csv('submission.csv', index=False)"
+    "p1 = clf.predict_proba(tf_test)[:, np.where(clf.classes_ == 'human')[0][0]]\n",
+    "p2 = sgd_model.predict_proba(tf_test)[:, np.where(sgd_model.classes_ == 'human')[0][0]]\n",
+    "p3 = lgb.predict_proba(tf_test)[:, np.where(lgb.classes_ == 'human')[0][0]]\n",
+    "final_preds = p1*0.1 + p2*0.45 + p3*0.45\n",
+    "final_preds = 1 - final_preds\n",
+    "\n",
+    "df_test['generated'] = final_preds\n",
+    "submission = df_test[['id' if IS_RERUN else 'prompt_id', 'generated']]\n",
+    "submission.to_csv('submission.csv', index=False)"
    ]
   }
  ],
