[Add] many of report

--- a/refs.bib
+++ b/refs.bib
@@ -52,7 +52,7 @@ Data
   keywords = {Corpus linguistics, Writing assessment, Argumentation, Individual differences}
 }
 
-@misc{mistral7b,
+@misc{mistral7btext,
   author       = {Carl McBride Ellis},
   title        = {LLM: Mistral-7B Instruct texts},
   howpublished = {\url{https://www.kaggle.com/datasets/carlmcbrideellis/llm-mistral-7b-instruct-texts}}
@@ -76,8 +76,37 @@ Data
   howpublished = {\url{https://www.kaggle.com/datasets/conjuring92/fpe-processed-dataset}}
 }
 
-- Crossley, S. A, Baffour, P., Tian, Y., Franklin, A., Benner, M., & Boser., U. (2024). A large-scale corpus for assessing written argumentation: PERSUADE 2.0. Assessing Writing, 61. https://doi.org/10.1016/j.asw.2024.100865.
-- https://www.kaggle.com/datasets/carlmcbrideellis/llm-mistral-7b-instruct-texts
-- https://www.kaggle.com/datasets/alejopaullier/argugpt
-- https://www.kaggle.com/datasets/thedrcat/daigt-v4-train-dataset
-- https://www.kaggle.com/datasets/conjuring92/fpe-processed-dataset
+====================
+Methodology
+====================
+
+Entropy-based features
+@misc{huang2023gpt,
+  title         = {Approximating Human-Like Few-shot Learning with GPT-based Compression},
+  author        = {Cynthia Huang and Yuqing Xie and Zhiying Jiang and Jimmy Lin and Ming Li},
+  year          = {2023},
+  eprint        = {2308.06942},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.AI},
+  url           = {https://arxiv.org/abs/2308.06942}
+}
+
+@misc{mistral7b,
+  title         = {Mistral 7B},
+  author        = {Albert Q. Jiang and Alexandre Sablayrolles and Arthur Mensch and Chris Bamford and Devendra Singh Chaplot and Diego de las Casas and Florian Bressand and Gianna Lengyel and Guillaume Lample and Lucile Saulnier and Lélio Renard Lavaud and Marie-Anne Lachaux and Pierre Stock and Teven Le Scao and Thibaut Lavril and Thomas Wang and Timothée Lacroix and William El Sayed},
+  year          = {2023},
+  eprint        = {2310.06825},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL},
+  url           = {https://arxiv.org/abs/2310.06825}
+}
+
+@misc{deberta,
+  title         = {DeBERTa: Decoding-enhanced BERT with Disentangled Attention},
+  author        = {Pengcheng He and Xiaodong Liu and Jianfeng Gao and Weizhu Chen},
+  year          = {2021},
+  eprint        = {2006.03654},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL},
+  url           = {https://arxiv.org/abs/2006.03654}
+}
